# Bard

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/plans/: bard_vnext_updated_c432db7f.plan.md
data/: luke_prepared.json  luke_source.txt
data/alignments/: chapter_1_alignment.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/porcupine/: Hey-Bard_en_wasm_v4_0_0.ppn
frontend/src/: App.jsx  index.css
frontend/src/components/: AskBardButton.jsx  AudioPlayer.jsx  ChapterSelector.jsx  ChapterSidebar.jsx  CurrentSentence.jsx  Header.jsx  QuestionModal.jsx  VoiceRecorder.jsx
frontend/src/hooks/: useElevenLabsConversation.js  useVoiceRecorder.js  useWakeWord.js
src/bard/: __init__.py  config.py  database.py  models.py
src/bard/api/: __init__.py  main.py
src/bard/api/routes/: __init__.py  agent.py  playback.py  qa.py  transcribe.py
src/bard/preprocessing/: __init__.py  alignment.py  run_all.py  text_prep.py  tts_generation.py
src/bard/services/: __init__.py  context.py  llm.py  tts.py
tests/: __init__.py  test_context.py  test_database.py
