[project]
name = "bard"
version = "0.1.0"
description = "Interactive Narration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Drew Taylor" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.60.0",
    "elevenlabs>=1.15.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "mutagen>=1.47.0",
    "tiktoken>=0.8.0",
    "nltk>=3.9.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
preprocessing = [
    "aeneas>=1.7.3",
]

[project.scripts]
bard-preprocess = "bard.preprocessing.run_all:main"
bard-serve = "bard.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

